syntax = "proto3";

package xray.app.stats.command;
option go_package = "github.com/xtls/xray-core/app/stats/command";

message GetStatsRequest {
  string name = 1;
  bool reset = 2;
}

message Stat {
  string name = 1;
  int64 value = 2;
}

message GetStatsResponse {
  Stat stat = 1;
}

service StatsService {
  rpc GetStats(GetStatsRequest) returns (GetStatsResponse) {}
}
